chore(argo): migrate

--- a/apps/ascii-frontend/kustomize/base/kustomization.yaml
+++ b/apps/ascii-frontend/kustomize/base/kustomization.yaml
@@ -7,5 +7,7 @@ resources:
   - service.yaml
   - virtualservice.yaml
   - analysis-template.yaml
+  - promotion-template.yaml
+  - promotion-rbac.yaml
 
 namespace: default
