--- a/apps/writer/kustomize/base/rollout.yaml
+++ b/apps/writer/kustomize/base/rollout.yaml
@@ -77,3 +77,9 @@ spec:
             value: "https://dev.writer.fullstack.pw"
           - name: environment
             value: "dev"
+      postPromotionAnalysis:
+        templates:
+          - templateName: promote-to-prod
+        args:
+          - name: app-name
+            value: writer
