--- a/apps/memorizer/kustomize/base/rollout.yaml
+++ b/apps/memorizer/kustomize/base/rollout.yaml
@@ -61,3 +61,9 @@ spec:
             value: "https://dev.memorizer.fullstack.pw"
           - name: environment
             value: "dev"
+      postPromotionAnalysis:
+        templates:
+          - templateName: promote-to-prod
+        args:
+          - name: app-name
+            value: memorizer
