--- a/apps/writer/kustomize/base/kustomization.yaml
+++ b/apps/writer/kustomize/base/kustomization.yaml
@@ -4,5 +4,7 @@ resources:
   - service-preview.yaml
   - virtualservice.yaml
   - analysis-template.yaml
+  - promotion-template.yaml
+  - promotion-rbac.yaml
 
 namespace: default
