--- a/apps/ascii-frontend/kustomize/overlays/dev/kustomization.yaml
+++ b/apps/ascii-frontend/kustomize/overlays/dev/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 
 images:
   - name: registry.fullstack.pw/library/ascii-frontend
-    newTag: v1.0.0
+    newTag: 9e52e956586c4f25ca83a56e5c90ff250ef4e52f
 
 patches:
   - patch: |-
