--- a/apps/ascii-frontend/kustomize/base/rollout.yaml
+++ b/apps/ascii-frontend/kustomize/base/rollout.yaml
@@ -49,7 +49,7 @@ spec:
           - name: app-name
             value: ascii-frontend
           - name: app-url
-            value: "https://dev.ascii-frontend.fullstack.pw"
+            value: "https://dev.ascii.fullstack.pw"
           - name: environment
             value: "dev"
       postPromotionAnalysis:
