fix(rollouts): enable autoPromotionEnabled for prod promotion

--- a/apps/ascii-frontend/kustomize/base/rollout.yaml
+++ b/apps/ascii-frontend/kustomize/base/rollout.yaml
@@ -40,7 +40,7 @@ spec:
     blueGreen:
       activeService: ascii-frontend
       previewService: ascii-frontend-preview
-      autoPromotionEnabled: false
+      autoPromotionEnabled: true
       scaleDownDelaySeconds: 30
       prePromotionAnalysis:
         templates:
