--- a/apps/enqueuer/kustomize/base/rollout.yaml
+++ b/apps/enqueuer/kustomize/base/rollout.yaml
@@ -46,7 +46,7 @@ spec:
     blueGreen:
       activeService: enqueuer
       previewService: enqueuer-preview
-      autoPromotionEnabled: false
+      autoPromotionEnabled: true
       scaleDownDelaySeconds: 30
       prePromotionAnalysis:
         templates:
