--- a/apps/memorizer/kustomize/base/rollout.yaml
+++ b/apps/memorizer/kustomize/base/rollout.yaml
@@ -49,7 +49,7 @@ spec:
     blueGreen:
       activeService: memorizer
       previewService: memorizer-preview
-      autoPromotionEnabled: false
+      autoPromotionEnabled: true
       scaleDownDelaySeconds: 30
       prePromotionAnalysis:
         templates:
