--- a/apps/ascii-frontend/kustomize/ephemeral-base/ingress.yaml
+++ b/apps/ascii-frontend/kustomize/ephemeral-base/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     external-dns.alpha.kubernetes.io/hostname: "endpoint"
-    cert-manager.io/cluster-issuer: "letsencrypt-staging"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   ingressClassName: "traefik"
   tls:
